--- a/.github/workflows/2 - sonar.yaml
+++ b/.github/workflows/2 - sonar.yaml
@@ -1,11 +1,7 @@
 name: 2 - SonarCloud
 
 on:
-  push:
-    branches: [ "main", "feature/*" ]
-  pull_request:
-    branches: [ "main", "feature/*" ]
-  workflow_dispatch:
+  workflow_call:
 
 permissions:
   pull-requests: read
