--- a/.github/workflows/1 - build.yaml
+++ b/.github/workflows/1 - build.yaml
@@ -26,6 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: Build
     steps:
+      - uses: actions/checkout@v2
       - name: Run SonarQube Analysis
         uses: ./.github/workflows/sonar.yaml
         with:
@@ -37,6 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: SonarCloud
     steps:
+    - uses: actions/checkout@v2
     - name: Buscando nome da branch
       shell: bash
       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
