--- a/.github/workflows/workflow_feature.yaml
+++ b/.github/workflows/workflow_feature.yaml
@@ -23,24 +23,6 @@ jobs:
       run: dotnet test --no-build --verbosity normal
   
   SonarCloud:
-    runs-on: ubuntu-latest
-    needs: Build
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/workflows/sonar.yaml
-
-  Pull-Request:
-    runs-on: ubuntu-latest
-    needs: SonarCloud
-    steps:
-    - uses: actions/checkout@v4
-    - name: Buscando nome da branch
-      shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: extract_branch
-
-    - name: create pull request
-      run: gh pr create -B main -H ${{ steps.extract_branch.outputs.branch }} --title 'Pull Request - ${{ steps.extract_branch.outputs.branch }} para main' --body 'Created by Github action'
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+    uses: ./.github/workflows/sonar.yaml
+    secrets: 
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
