--- a/.github/workflows/workflow_feature.yaml
+++ b/.github/workflows/workflow_feature.yaml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "feature/*" ]
 
+permissions:
+  pull-requests: read
+
 jobs:
   Build:
     runs-on: ubuntu-latest
