--- a/.github/workflows/workflow_feature.yaml
+++ b/.github/workflows/workflow_feature.yaml
@@ -12,6 +12,12 @@ permissions:
 jobs:
   Build:
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: ./src
+        shell: bash
+
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
