--- a/.github/workflows/workflow_main.yaml
+++ b/.github/workflows/workflow_main.yaml
@@ -10,6 +10,10 @@ permissions:
 jobs:
   Build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
+        shell: bash
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
