--- a/.github/workflows/workflow_main.yaml
+++ b/.github/workflows/workflow_main.yaml
@@ -2,7 +2,7 @@ name: 'Terraform'
 
 on:
   push:
-    branches: [ "Release", "Main" ]
+    branches: [ "Release", "main" ]
 
 permissions:
   contents: read
@@ -71,5 +71,21 @@ jobs:
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/"Main"' && github.event_name == 'push'
+      if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
+
+  # destroy:
+  #   name: Terraform Destroy
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+
+  #     - name: Set up Terraform
+  #       uses: hashicorp/setup-terraform@v1
+
+  #     - name: Terraform Init
+  #       run: terraform init
+
+  #     - name: Terraform Destroy
+  #       run: terraform destroy -auto-approve
