--- a/.github/workflows/workflow_main.yaml
+++ b/.github/workflows/workflow_main.yaml
@@ -74,18 +74,18 @@ jobs:
       if: github.ref == 'refs/heads/Release' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
 
-  # destroy:
-  #   name: Terraform Destroy
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v2
+  destroy:
+    name: Terraform Destroy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-  #     - name: Set up Terraform
-  #       uses: hashicorp/setup-terraform@v1
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1
 
-  #     - name: Terraform Init
-  #       run: terraform init
+      - name: Terraform Init
+        run: terraform init
 
-  #     - name: Terraform Destroy
-  #       run: terraform destroy -auto-approve
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve
