--- a/.github/workflows/workflow_main.yaml
+++ b/.github/workflows/workflow_main.yaml
@@ -75,6 +75,7 @@ jobs:
       run: terraform apply -auto-approve -input=false
 
   destroy:
+    needs: terraform
     name: Terraform Destroy
     runs-on: ubuntu-latest
     steps:
