--- a/.github/workflows/workflow_main.yaml
+++ b/.github/workflows/workflow_main.yaml
@@ -27,55 +27,29 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
 
+  CreateImage:
+    needs: 'Build'
+    runs-on: ubuntu-latest
 
-  # terraform:
-  #   needs: Build
-  #   name: 'Terraform'
-  #   runs-on: ubuntu-latest
-  #   environment: production
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-  #   defaults:
-  #     run:
-  #       working-directory: ./infra
-  #       shell: bash
+    - name: Log in to Amazon ECR
+      run: |
+        aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
 
-  #   steps:
-  #   - name: Checkout
-  #     uses: actions/checkout@v4
+    - name: Build Docker image
+      run: docker build -t techchallenge_api .
 
-  #   - name: Configure AWS credentials
-  #     uses: aws-actions/configure-aws-credentials@v2
-  #     with:
-  #       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #       aws-region: us-east-1
+    - name: Tag Docker image
+      run: docker tag techchallenge_api:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/dotnet-project-repo:latest
 
-  #   # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-  #   - name: Setup Terraform
-  #     uses: hashicorp/setup-terraform@v1
-  #     with:
-  #       cli_config_credentials_token: ${{ secrets.TERRAFORM_GITFLOW_API }}
+    - name: Push Docker image to ECR
+      run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/dotnet-project-repo:latest
 
-  #   # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-  #   - name: Terraform Init
-  #     run: terraform init
-
-  #   # Checks that all Terraform configuration files adhere to a canonical format
-  #   - name: Terraform Format
-  #     run: terraform fmt -check
-
-  #   # Generates an execution plan for Terraform
-  #   - name: Terraform Plan
-  #     run: terraform plan -input=false
-
-  #     # On push to "main", build or change infrastructure according to Terraform configuration files
-  #     # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-  #   - name: Terraform Apply
-  #     if: github.ref == 'refs/heads/Release' && github.event_name == 'push'
-  #     run: terraform apply -auto-approve -input=false
-
-  destroy:
-    name: Terraform Destroy
+  Terraform:
+    needs: 'CreateImage'
     runs-on: ubuntu-latest
 
     defaults:
@@ -84,24 +58,29 @@ jobs:
         shell: bash
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-  
-      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          cli_config_credentials_token: ${{ secrets.TERRAFORM_GITFLOW_API }}
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
 
-      - name: Terraform Init
-        run: terraform init
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+    
+    - name: Terraform Init
+      run: terraform init
 
-      - name: Terraform Destroy
-        run: terraform destroy -auto-approve
+    - name: Terraform Format
+      run: terraform fmt -check
+
+    - name: Terraform Plan
+      run: terraform plan -input=false
+
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: terraform apply -auto-approve -input=false
+
