--- a/.github/workflows/workflow_main.yaml
+++ b/.github/workflows/workflow_main.yaml
@@ -31,6 +31,11 @@ jobs:
     needs: 'Build'
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: ./src/API
+        shell: bash
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -41,7 +46,7 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
-        
+
     - name: Log in to Amazon ECR
       run: |
         aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
