--- a/.github/workflows/workflow_main.yaml
+++ b/.github/workflows/workflow_main.yaml
@@ -33,7 +33,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./src/API
+        working-directory: ./src
         shell: bash
 
     steps:
