--- a/.github/workflows/workflow_main.yaml
+++ b/.github/workflows/workflow_main.yaml
@@ -2,7 +2,7 @@ name: 'Terraform'
 
 on:
   push:
-    branches: [ "Release", "main" ]
+    branches: [ "release", "main" ]
 
 permissions:
   contents: read
